# dflow-api-client

./: Cargo.toml  README.md  rustfmt.toml
.cursor/: rules
examples/: get_events.rs
src/: common.rs  lib.rs
src/prediction/: error.rs  mod.rs  types.rs
src/prediction/websocket/: mod.rs  types.rs
src/swap/: error.rs  mod.rs  types.rs
