[package]
name = "dflow-api-client"
description = "DFlow API rust client"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
reqwest = { version = "0.12.11", features = ["json"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.130"
thiserror = "1"
