[package]
name = "dflow-api-client"
description = "DFlow API rust client"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
default = []
websocket = ["tokio", "tokio-tungstenite", "tokio-stream", "futures-util"]

[dependencies]
anyhow = "1"
futures-util = { version = "0.3", optional = true }
reqwest = { version = "0.12.11", features = ["json"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.130"
thiserror = "1"

# WebSocket dependencies (optional)
tokio = { version = "1", features = ["sync", "rt", "time", "macros"], optional = true }
tokio-stream = { version = "0.1", optional = true }
tokio-tungstenite = { version = "0.24", features = ["native-tls"], optional = true }
